--- a/package.json
+++ b/package.json
@@ -6,18 +6,37 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "tv:ios": "npx expo run:ios --device",
+    "tv:android": "npx expo run:android --device",
+    "setup": "export EXPO_TV=1 && pnpm dlx expo prebuild --clean",
+    "revert": "unset EXPO_TV && pnpm dlx expo prebuild --clean"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.9",
+    "@react-native-tvos/config-tv": "^0.1.3",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.24",
     "expo": "~53.0.20",
     "expo-status-bar": "~2.2.3",
+    "graphql": "^16.11.0",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "npm:react-native-tvos@latest",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
+  },
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native"
+      ]
+    }
   },
   "private": true
 }
